updated html and added style to header
rearranged the HTML so the 'add a book' button is in the correct row, also added the appropriate styling for the header section and 'add a book' button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         <header>
             <h1>Library</h1>
         </header>
+        <div class="add-book-container">
+            <button class="add-book btn">+ Add a book</button>
+        </div>
         <main>
-            <h2>+ Add a book</h2>
+
         </main>
+        <footer>
+
+        </footer>
     </div>
 </body>
 
