created style and positioning for each book entry
styled the grid layout for the main element, allowing each entry to be positioned correctly, and styled the card class.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             <button class="add-book btn">+ Add a book</button>
         </div>
         <main>
-
+            <div class="card">
+                <h5>Diary of a Wimpy Kid</h5>
+                <h5>Jeff Kinney</h5>
+                <h5>210</h5>
+                <button class="read btn">Read</button>
+                <button class="remove btn">Remove</button>
+            </div>
         </main>
         <footer>
 
