modal window added along with styles
added the modal window in HTML and also set up its styles, adjusted the box-shadow on the header element and card class to

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
         </footer>
     </div>
+    <div class="book-modal hide-display">
+        <h6>Add book information!</h6>
+        <form action="#" method="post">
+            <input type="text" placeholder="Book Name" required />
+            <input type="text" placeholder="Author" required />
+            <input type="number" placeholder="Pages" required />
+            <div class="checkbox-for-book">
+                <label for="book-read">Have you finished the book?</label>
+                <input type="checkbox" id="book-read" required />
+            </div>
+            <button class="book-submit btn">Submit</button>
+        </form>
+    </div>
 </body>
 
 </html>
