added a few validation checks that makes sure the input can't be empty

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <label for="book-read">Have you finished the book?</label>
                 <input type="checkbox" id="book-read" name="has-book-been-read" value="read" />
             </div>
-            <button type="submit" class="book-submit btn">Submit</button>
+            <button class="book-submit btn">Submit</button>
         </form>
     </div>
 </body>
